# db-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.sample  README.md  docker-compose.yml.sample  main.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pre-commit.yaml  release.yaml  trufflehog.yaml
backend/: __init__.py  auth.py  config.py  connection.py  crypto.py  monitor.py  sockets.py  storage.py
backend/api/: __init__.py  backup.py  databases.py  grants.py  introspection.py  query.py  roles.py  users.py  utils.py
backend/auth/: __init__.py  core.py  db.py  decorators.py  grants.py  permissions.py  roles.py  routes.py  users.py
backend/core/: audit.py  config.py  crypto.py  telemetry.py
backend/database/: connection.py  storage.py
backend/routes/: __init__.py  api.py  auth_routes.py  views.py
backend/services/: monitor.py
backend/web/: routes.py  sockets.py  views.py
static/css/: style.css
static/js/: main.js
templates/: index.html  login.html  register.html
tests/: test_basic.py
