[project]
name = "db-monitor"
version = "0.1.0"
description = "A comprehensive Flask application for monitoring and managing databases with SQL editor and real-time connection status"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "sqlalchemy>=2.0.0",
    "python-socketio>=5.9.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "python-engineio>=4.7.0",
    "cryptography>=46.0.4",
]

[dependency-groups]
lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = ["I"]

[project.optional-dependencies]
ldap = ["ldap3>=2.9.0"]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["backend*"]
